--- a/static/css/extra.scss
+++ b/static/css/extra.scss
@@ -77,7 +77,8 @@ label.error {
 }
 
 .login-wrapper {
-    padding: 0.3rem 0;
+    padding: 0 0 .3rem;
+    
     .top-info {
         padding: 0 0.3rem;
         margin-top: 0.5rem;
