--- a/static/css/extra.scss
+++ b/static/css/extra.scss
@@ -1277,7 +1277,22 @@ label.error {
     
 }
 
-
+.activityAddBtn{
+    display: block;
+    width: .88rem;
+    height: .88rem;
+    opacity: .94;
+    background-image: url('../images/发布@2x.png');
+    background-position: center ;
+    background-color: #A2DE22;
+    background-repeat: no-repeat;
+    background-size: .4rem;
+    border-radius: 50%;
+    position: fixed;
+    bottom: 1rem;
+    left: 50%;
+    margin-left: -.44rem;
+}
 
 
 
