--- a/static/css/extra.scss
+++ b/static/css/extra.scss
@@ -1500,13 +1500,16 @@ label.error {
     }
 }
 
-
 .becauseWrap{
     padding: .15rem .3rem;
     font-size: .26rem;
 }
-
-
+.actComment-item{
+    .info .toComment{
+        margin-bottom: 0;
+        margin-top: .2rem;
+    }
+}
 
 
 
