--- a/static/css/base.scss
+++ b/static/css/base.scss
@@ -600,6 +600,8 @@ textarea {
 
 .form-wrapper {
     .form-item {
+        width: 100%;
+        overflow: hidden;
         position: relative;
         padding: 0.3rem;
         background: #fff;
