--- a/static/css/extra.scss
+++ b/static/css/extra.scss
@@ -980,6 +980,10 @@ label.error {
                     background-size: .28rem;
                 }
                 
+                &.icon-address{
+                    background-image: url('../images/收货地址@2x.png');
+                    background-size: .2rem;
+                }
                 
             }
         }
