--- a/static/css/extra.scss
+++ b/static/css/extra.scss
@@ -1097,6 +1097,10 @@ label.error {
                     background-image: url('../images/报名须知@2x.png');
                 }
                 
+                &.icon-placeDesc{
+                    background-image: url('../images/地方介绍@2x.png');
+                }
+                
                 &.icon-mianze{
                     background-image: url('../images/免责申明@2x.png');
                 }
